Fix section 1 style on smaller screens

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,14 @@
 body {
     margin: 0;
 }
+
 #content {
-    height: 40em;
     width: 100%;
+}
+
+#content-about {
+    width: 100%;
+    padding-bottom: 5em;
 }
 
 img {
